<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>irobot_interfaces_plugin</name>
  <version>0.1.0</version>
  <description>Default plugins for the performance test template factory</description>
  <maintainer email="asoragna@irobot.com">Alberto Soragna</maintainer>
  <author>Alberto Soragna</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>performance_test_msgs</build_depend>
  <build_depend>performance_test_plugin_cmake</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>performance_test_msgs</exec_depend>
  <exec_depend>performance_test_plugin_cmake</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <member_of_group>performance_test_factory_plugins</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
