<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>performance_test</name>
  <version>0.2.0</version>
  <description>Tests for measuring ROS2 performances</description>
  <author>Alberto Soragna</author>
  <maintainer email="asoragna@irobot.com">Alberto Soragna</maintainer>
  <maintainer email="joxoby@irobot.com">Juan Oxoby</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>performance_test_msgs</build_depend>
  <build_depend>benchmark_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>performance_test_msgs</exec_depend>
  <exec_depend>benchmark_msgs</exec_depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

